2010-07-13  Darío Rodríguez <dario.rodriguez@artica.es>

	* godmode/reporting/graph_builder.php: Fixed problem when creating or
	updating a graph with empty name.
	Fixes: #3026943

2010-07-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	godmode/reporting/visual_console_builder.editor.php: Fixed the
	visualmaps for ignore the disabled and delete pending modules
	for bug: 3022892

2010-07-13  Darío Rodríguez <dario.rodriguez@artica.es>

	* general/pandora_help.php: Delete interrogation picture to get a 
	better style.
	Fixes: #3028524

2010-07-12  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/setup/setup.php: Updated year. Cleaned code.

	* godmode/alerts/alert_list.builder.php: Added link to create action.

2010-07-12  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/configure_alert_compound.php: fixed the page to request
	ajax, now it's new ajax page.
	Fixes: #3020713

2010-07-12  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_visual_console.js: in function "draw_line"
	changed the const 15 value to dinamic value half width of image.
	Fixes: #3019645
	
	* godmode/reporting/visual_console_builder.editor.js: cleaned source code
	and deleted unused function "eventsButtonsToolbox", this function was in
	old wip version of visual editor.

2010-07-12  Dario Rodriguez  <dario.rodriguez@artica.es>

	* godmode/reporting/visual_console_builder.php: fixed error getting
	image size creating a map without background
	Fixes: #3014276 

2010-07-12  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/ver_agente.php: re-ordered the tabs. 

2010-07-12  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php: fixed the
	reset of the size when change a visual map background

2010-07-12  Dario Rodriguez  <dario.rodriguez@artica.es>

	* operation/search_results.php: fixed bug in search with zero matches
	and filtering by: maps, reports or graphs.
	Fixes: #3025607
