@@ -1,0 +1,16 @@
+<?php
+/**
+ * @package Include/help/en
+ */
+?>
+<h1>Report builder</h1>
+
+To create a report, you must first fill the form providing:
+<ul>
+	<li>A name</li>
+	<li>A group</li>
+	<li>A description</li>
+</ul>
+Then you must press the botton with the text Create.
+<br /><br />
+To edit the properties of an existing report just change the form field and press the Update botton. 
